Resolve zeroconf printer IPs in PrinterConfigurer.

It's possible that we have to setup a printer before
ZeroconfPrinterDetector has finished its scan.  Notably, when a printer
is pre-selected in the PrintPreview dialog.  To avoid installing printers
with uris we can't resolve, resolve the IP in configurer.  As a bonus,
we now deselect the printer if it's not immedeately usable.

Bug: 769469
Change-Id: I96e07edd9a2eaf199f093408bbb6b8cf583fe851